--- a/week4 ass/week4_1.1_assignment.ipynb
+++ b/week4 ass/week4_1.1_assignment.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9d969ad1-8062-4cdd-95fa-81eb6ef7ec82",
    "metadata": {},
    "outputs": [
@@ -349,18 +349,24 @@
       "  Single Inheritance:\n",
       "\n",
       "    In single inheritance, a subclass inherits from only one superclass.\n",
+      "    \n",
+      "\n",
       "Animal speaks\n",
       "Dog barks\n",
       " \n",
       " Multiple Inheritance:\n",
       "\n",
       "    In multiple inheritance, a subclass inherits from more than one superclass.\n",
+      "    \n",
+      "\n",
       "Can fly\n",
       "Can swim\n",
       " \n",
       " Multilevel Inheritance:\n",
       "\n",
       "    In multilevel inheritance, a subclass inherits from another subclass.\n",
+      "\n",
+      "\n",
       "Animal speaks\n",
       "Dog barks\n",
       "Poodle dances\n",
@@ -385,7 +391,9 @@
     "\n",
     "print('''  Single Inheritance:\n",
     "\n",
-    "    In single inheritance, a subclass inherits from only one superclass.''')\n",
+    "    In single inheritance, a subclass inherits from only one superclass.\n",
+    "    \n",
+    "''')\n",
     "\n",
     "\n",
     "# Single Inheritance Example\n",
@@ -405,7 +413,9 @@
     "\n",
     "print(''' \\n Multiple Inheritance:\n",
     "\n",
-    "    In multiple inheritance, a subclass inherits from more than one superclass.''')\n",
+    "    In multiple inheritance, a subclass inherits from more than one superclass.\n",
+    "    \n",
+    "''')\n",
     "# Multiple Inheritance Example\n",
     "class Flyable:\n",
     "    def fly(self):\n",
@@ -425,7 +435,9 @@
     "\n",
     "print(''' \\n Multilevel Inheritance:\n",
     "\n",
-    "    In multilevel inheritance, a subclass inherits from another subclass.''')\n",
+    "    In multilevel inheritance, a subclass inherits from another subclass.\n",
+    "\n",
+    "''')\n",
     "\n",
     "# Multilevel Inheritance Example\n",
     "class Animal:\n",
