--- a/week4 ass/week4_1.1_assignment.ipynb
+++ b/week4 ass/week4_1.1_assignment.ipynb
@@ -71,12 +71,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd93ccba-7f91-4791-b9e6-5c0c58500a43",
+   "cell_type": "markdown",
+   "id": "407c0edc-6174-460c-9557-09ba339e6614",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Name the four pillars of OOPs."
+   ]
   },
   {
    "cell_type": "code",
